# post-office

./: .gitignore  README.md  install.sh  pyproject.toml
deploy/: post-office-ui.env.example  post-office-ui.service  postoffice-tailnet.nginx.conf
post_office_mcp/: __init__.py  server.py  ui_server.py  worker_runner.py
tests/: fake_worker.py  test_post_office.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/src/: App.tsx  api.ts  index.css  types.ts
